[package]
name = "search_index"
version = "0.1.0"
authors = ["Cliff Crosland <cliffcrosland@gmail.com>"]
edition="2018"

[dependencies]
actix = "0.7.9"
actix-web = "0.7.18"
askama = "0.8"
env_logger = "0.5"
log = "0.4.6"
rand = "0.6.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
unicode-segmentation = "1.2.1"

[features]
benchmarks = []
